# Atoll

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pricing-catalog.example.json  vite.config.ts
.cursor/skills/atoll-release/: SKILL.md
.github/workflows/: pages.yml  release.yml  trigger-release.yml
.mimocode/plans/: 1783065153580-playful-lagoon.md
docs/: cursor-mascot-preview.html  index.html  macos-private-api.md
docs/css/: approval-preview.css  atoll-logo.css  compact-bar-preview.css  mascots.css  site.css
docs/js/: agent-mascots.js  atoll-logo.js  cursor-mascot.js
docs/superpowers/plans/: 2026-06-10-claude-island-ui-polish.md
docs/superpowers/specs/: 2026-06-10-claude-island-ui-polish-design.md
homebrew/Casks/: atoll.rb
scripts/: atoll-claude-hook.mjs  atoll-claude-hook.test.mjs  atoll-codex-hook.mjs  atoll-codex-hook.test.mjs  atoll-cursor-hook.mjs  atoll-cursor-hook.test.mjs  atoll-hook-bridge.mjs  atoll-hook-bridge.test.mjs  capture-app-media.mjs  capture-compact-bar.mjs  capture-demo-gif.mjs  capture-plan-app-media.mjs  export-brand-assets.mjs  export-readme-assets.mjs  generate-latest-json.sh  install.cmd  install.ps1  install.sh  release.sh  setup-updater-signing.sh  sync-release-notes.py  sync-version.sh
scripts/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.2.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.25.md  v0.1.26.md  v0.1.27.md  v0.1.28.md  v0.1.29.md  v0.1.3.md  v0.1.30.md  v0.1.31.md  v0.1.32.md  v0.1.33.md  v0.1.34.md  v0.1.35.md  v0.1.36.md  v0.1.37.md  v0.1.38.md  v0.1.39.md  v0.1.4.md  v0.1.40.md  v0.1.41.md  v0.1.42.md  v0.1.43.md  v0.1.44.md  v0.1.45.md  (+9 more)
src/: AgentMascot.test.tsx  AgentMascot.tsx  App.test.tsx  App.tsx  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  AtollLogo.tsx  BrandExport.tsx  ClawdMascot.tsx  CodexMascot.tsx  CursorMascot.tsx  CursorMascotPreview.tsx  PixelDigitDisplay.tsx  PricingSettings.tsx  TokenCounter.tsx  TokenHeatmapView.tsx  UsageSettingsView.tsx  appUpdate.test.ts  appUpdate.ts  asyncUnlisten.test.ts  asyncUnlisten.ts  atollTransitions.ts  compactLayout.test.ts  compactLayout.ts  costFormat.test.ts  costFormat.ts  demoSnapshot.test.ts  demoSnapshot.ts  displayPrefs.ts  hookAgentsConfigured.test.ts  hookAgentsConfigured.ts  hookHealth.test.ts  hookHealth.ts  i18n.test.ts  islandPresentation.test.ts  islandPresentation.ts  logoStates.test.ts  logoStates.ts  main.tsx  pixelFont.ts  (+13 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  debug_agent.rs  hook_bridge.rs  hook_trust.rs  lib.rs  local_time.rs  main.rs  pricing.rs  token_history.rs  transcript.rs
src-tauri/src/platform/: autostart.rs  macos.rs  mod.rs  windows.rs
src/i18n/: index.ts
src/locales/en/: common.json  (+4 more)
src/test/: setup.ts
(+5 files in other folders)
