[package]
name = "atoll"
version = "0.1.0"
description = "A floating approval island for local coding agents."
authors = ["Atoll"]
edition = "2021"

[lib]
name = "atoll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
