[package]
name = "atoll"
version = "0.1.2"
description = "A floating approval island for local coding agents."
authors = ["Atoll"]
edition = "2021"

[lib]
name = "atoll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSScreen", "NSWindow"] }
objc2-foundation = "0.3.2"
