[package]
name = "atoll"
version = "0.1.33"
description = "A floating approval island for local coding agents."
authors = ["Atoll"]
edition = "2021"
default-run = "atoll"

[lib]
name = "atoll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
dunce = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
iana-time-zone = "0.1"
socket2 = "0.5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
auto-launch = "0.5"
raw-window-handle = "0.6"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSScreen", "NSWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSError"] }
objc2-service-management = { version = "0.3.2", features = ["SMAppService"] }
